Added New Animationt to Contact-Me Page And Some Videos to My Gallery

--- a/Portfolio/css/styleHome.css
+++ b/Portfolio/css/styleHome.css
@@ -44,6 +44,11 @@ color: red;
     .navbar{
          background-color:black   
     }
+    .navbar li{
+        float:left ;
+        list-style: none;
+        margin: 4px 4px;
+        }
 }
 
 
