--- a/Portfolio/css/styleContact-Me.css
+++ b/Portfolio/css/styleContact-Me.css
@@ -37,11 +37,19 @@ color: red;
 }
 
 .contacts{
+    display: flex;
+    flex-direction: column;
+    position : relative;
+    border-radius: 40px;
+    align-items: center;
     font-size: 20px;
     color: white;
     margin-top : 200px;
-    text-align: center;
+    background-color: brown;   
+    margin-left: 500px;
+    margin-right: 500px;
 }
+
 h1{
     font-family:'Courier New', Courier, monospace;
 }
@@ -53,11 +61,95 @@ h1{
     .navbar{
          background-color:black   
     }
+    .navbar li{
+        float:none ;
+        list-style: none;
+        margin: 4px 4px;
+        }
 }
 
 
+    form{
+     background-color : brown;
+     padding: 30px;
+     border-radius : 20%;
+     width: 200px;
+     height: 250px;
+     margin-left: 80vw;
+    }
+    .frm{
+     font-size : 25px;
+     color : white;
+     text-align: center;
+    }
+    div input{
+     background-color: aquamarine;
+     text-align : center;
+    }
+    button{
+     background-color : aquamarine;
+    }
+    #b1{
+     margin-left: 3em;
+    }
+    form{
+     transition: width 3s, height 3s, transform 2s;
+    }
+   
+    form:hover{
+   
+       transform: rotate(360deg);
+    }
+    a{
+       color:white;
+       text-decoration: none; 
+       font-family:'Courier New', Courier, monospace
+    }
+    
+    .text{
+        width: 100%;
+        overflow: hidden;
+        white-space: nowrap;
+        animation:
+         typing 5s steps(27,end),
+         cursor .4s step-end infinite;    
+     }
+     span{
+        color:white;
+        display: inline;
+        text-decoration: none;
+        font-size: 30px;
+        letter-spacing: 4px;
+        animation : animate 3s linear ;
+        animation-duration: 6s;
+       }
 
+     @keyframes cursor{
+        from, to {border-color: transparent;}
+        50% {border-color: orange;}
+     }
+     @keyframes typing{
+        from{width: 0;} to {width: 100%;}
+    }
+     @keyframes animate{
+        0%{
+            transform: rotateY(360deg) scale(0);
+        }
+        50%{
+            transform: rotateX(0deg) scale(1);
+        }
+        100%{
+            transform: none;
+        }
+       }
 
+      .contacts{
+        align-items: center;
+        }
+
+        
+
+       
 
 
 
