--- a/Portfolio/css/styleMy-Gallery.css
+++ b/Portfolio/css/styleMy-Gallery.css
@@ -32,12 +32,19 @@ color: red;
 }
 .container{
     display: flex;
-    justify-content:center;
+    justify-content: center;
     flex-wrap: wrap;
-
 }
 img{
     width: 500px;
+    border: 2px solid gray;
+    border-radius: 20px;
+}
+video{
+    width: 500px;
+    height: 500px;
+    border: 2px solid gray;
+    border-radius: 20px;
 }
 
 @media (max-width:500px){                /*For small screens apply this styling using media rule*/
