--- a/Portfolio/css/styleContact-Me.css
+++ b/Portfolio/css/styleContact-Me.css
@@ -1,9 +1,15 @@
 body{
     background-color: #081b29;
 }
-
+footer{
+    color:white;
+    margin-top: 17vh;
+    text-align: center;
+    font-family: cursive;
+    color: cyan;
+}
 .navbar{
-    background-color: yellowgreen;
+    background-color: cyan;
     border-radius: 30px;
 }
 .navbar ul{
@@ -16,8 +22,8 @@ margin: 14px 20px;
 }
 
 .navbar li a{
+font-family: cursive;
 padding: 3px 3px;
-/* color: whitesmoke; */
 text-decoration: none;
 }
 
@@ -28,7 +34,7 @@ color: red;
     color: red;
 }
 .my-gallery, .home, .about-me{
-    color:whitesmoke
+    color:black;
 }
 .container{
     display: flex;
@@ -43,13 +49,16 @@ color: red;
     border-radius: 40px;
     align-items: center;
     font-size: 20px;
-    color: white;
+    color: cyan;
     margin-top : 200px;
-    background-color: brown;   
+    /* background-color: brown;    */
+    background-color: #081b29;
     margin-left: 500px;
     margin-right: 500px;
 }
-
+.contacts a{
+    font-size: 22px;
+}
 h1{
     font-family:'Courier New', Courier, monospace;
 }
@@ -101,13 +110,18 @@ h1{
        transform: rotate(360deg);
     }
     a{
-       color:white;
        text-decoration: none; 
-       font-family:'Courier New', Courier, monospace
+       font-family:'Courier New', Courier, monospace;
+       color: cyan;
     }
-    
-    .text{
+    .number{
+        color:cyan;
+    }
+    .email{
+        color:cyan;
         width: 100%;
+        font-family:'Courier New', Courier, monospace;
+        text-align: center;
         overflow: hidden;
         white-space: nowrap;
         animation:
@@ -118,6 +132,7 @@ h1{
         color:white;
         display: inline;
         text-decoration: none;
+        font-family:'Courier New', Courier, monospace;
         font-size: 30px;
         letter-spacing: 4px;
         animation : animate 3s linear ;
@@ -143,9 +158,7 @@ h1{
         }
        }
 
-      .contacts{
-        align-items: center;
-        }
+
 
         
 
