--- a/Portfolio/css/styleHome.css
+++ b/Portfolio/css/styleHome.css
@@ -1,9 +1,15 @@
 body{
     background-color: #081b29;
 }
+footer{
+    margin-top: 52vh;
+    text-align: center;
+    font-family: cursive;
+    color: cyan;          
+}
 
 .navbar{
-    background-color: yellowgreen;
+    background-color: cyan;
     border-radius: 30px;
 }
 .navbar ul{
@@ -16,8 +22,8 @@ margin: 14px 20px;
 }
 
 .navbar li a{
+font-family: cursive;
 padding: 3px 3px;
-/* color: whitesmoke; */
 text-decoration: none;
 }
 
@@ -28,11 +34,11 @@ color: red;
     color: red;
 }
 .contact-me, .my-gallery, .about-me{
-    color:whitesmoke
+    color:black
 }
 .intro{
     font-size: 20px;
-    color: white;
+    color: cyan;
     margin-top : 200px;
     text-align: center;
 }
@@ -52,4 +58,73 @@ color: red;
 }
 
 
+/* .intro{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+} */
 
+.intro p{
+    display: inline-block;
+}
+
+.intro p:nth-child(1){
+    animation: animate 3s  0.25s;
+}
+.intro p:nth-child(2){
+    animation: animate 3s  0.5s;
+}
+.intro p:nth-child(3){
+    animation: animate 3s  0.75s;
+}
+.intro p:nth-child(4){
+    animation: animate 3s  1s;
+}
+.intro p:nth-child(5){
+    animation: animate 3s  1.25s;
+}
+.intro p:nth-child(6){
+    animation: animate 3s  1.5s;
+}
+.intro p:nth-child(7){
+    animation: animate 3s  1.75s;
+}
+.intro p:nth-child(8){
+    animation: animate 3s  2s;
+}
+.intro p:nth-child(9){
+    animation: animate 3s  2.25s;
+}
+.intro p:nth-child(10){
+    animation: animate 3s  2.5s;
+}
+.intro p:nth-child(11){
+    animation: animate 3s  2.75s;
+}
+.intro p:nth-child(12){
+    animation: animate 3s  3s;
+}
+.intro p:nth-child(13){
+    animation: animate 3s  3.25s;
+}
+.intro p:nth-child(14){
+    animation: animate 3s  3.5s;
+}
+.intro p:nth-child(15){
+    animation: animate 3s  3.75s;
+}
+.intro p:nth-child(16){
+    animation: animate 3s  4s;
+}
+@keyframes animate{
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.15;
+    }
+    100%{
+        opacity:0;
+    }
+}
