--- a/Portfolio/css/styleMy-Gallery.css
+++ b/Portfolio/css/styleMy-Gallery.css
@@ -1,9 +1,14 @@
 body{
     background-color: #081b29;
 }
-
+footer{
+    margin-top: 52vh;
+    text-align: center;
+    font-family: cursive;
+    color: cyan;
+}
 .navbar{
-    background-color: yellowgreen;
+    background-color: cyan;
     border-radius: 30px;
 }
 .navbar ul{
@@ -16,8 +21,8 @@ margin: 14px 20px;
 }
 
 .navbar li a{
+font-family: cursive;    
 padding: 3px 3px;
-/* color: whitesmoke; */
 text-decoration: none;
 }
 
@@ -28,7 +33,7 @@ color: red;
     color: red;
 }
 .contact-me, .home, .about-me{
-    color:whitesmoke
+    color:black
 }
 .container{
     display: flex;
