--- a/Portfolio/css/styleAbout-Me.css
+++ b/Portfolio/css/styleAbout-Me.css
@@ -2,10 +2,13 @@ body{
     background-color: #081b29;
 }
 footer{
-    margin-top: 52vh;
-    text-align: center;
+    margin-top: 37vh;
+    margin-bottom: 3vh;
+    /* text-align: center; */
     font-family: cursive;
     color: cyan;
+    display: flex;
+    justify-content: center;
 }
 .navbar{
     background-color: cyan;
@@ -18,6 +21,7 @@ footer{
 float:right;
 list-style: none;
 margin: 14px 20px;
+font-size: 10%vh;
 }
 
 .navbar li a{
@@ -38,17 +42,85 @@ color: red;
 .intro{
     font-size: 20px;
     color: cyan;
-    margin-top : 200px;
+    /* margin-top : 200px; */
     text-align: center;
 }
+.intro img{
+    width : 30px;
+    height: 30px;
+}
+.skills{
+    display: inline-block;
+    color : rgb(170, 253, 5);
+    
+}
+.hobbies{
+    display: inline-block;
+    color: rgb(170, 253, 5);
+   
+}
+.education{
+    display: inline-block;
+    color: rgb(170, 253, 5);
 
+}
+.languages{
+    display: inline-block;
+    color: rgb(170, 253, 5);
+    
+}
+.box{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10vh;
+    display: flex;
+    width : 100%;
+}
+.skills title{
+
+}
+.hobbies title{
+
+}
+.education title{
+
+}
+.languages title{
+    
+}
 @media (max-width:500px){
-    body{
+    /* body{
         background-color: rgb(131, 46, 46);  
-    }
+    } */
     .navbar{
-         background-color:black   
+         /* background-color:black; */
+         display: flex;
+         flex-wrap: wrap; 
+         width:100%; 
     }
+    .navbar li{
+        float:left ;
+        list-style: none;
+        margin: 4px 4px;
+        /* font-size: 10%vh; */
+    }
+    .box{
+        flex-wrap: wrap;
+        /* width: 100vh;
+        height: 50vh; */
+    }
+    .skills, .education, .hobbies, .languages{
+        font-size: small;
+    }
+    footer{
+        margin-top: 32vh;
+    }
+    /* .about-me{
+        color: red;
+    }
+    .contact-me, .home, .my-gallery{
+        color:white;
+    } */
 }
 
 
