--- a/Portfolio/css/styleContact-Me.css
+++ b/Portfolio/css/styleContact-Me.css
@@ -2,11 +2,13 @@ body{
     background-color: #081b29;
 }
 footer{
-    color:white;
-    margin-top: 17vh;
-    text-align: center;
+    margin-top: 22vh;
+    margin-bottom: 3vh;
+    /* text-align: center; */
     font-family: cursive;
     color: cyan;
+    display: flex;
+    justify-content: center;   
 }
 .navbar{
     background-color: cyan;
@@ -19,6 +21,7 @@ footer{
 float:right;
 list-style: none;
 margin: 14px 20px;
+font-size: 10%vh;
 }
 
 .navbar li a{
@@ -46,15 +49,15 @@ color: red;
     display: flex;
     flex-direction: column;
     position : relative;
-    border-radius: 40px;
+    /* border-radius: 40px; */
     align-items: center;
     font-size: 20px;
     color: cyan;
-    margin-top : 200px;
+    margin-top : 5vw;
     /* background-color: brown;    */
     background-color: #081b29;
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: 24vw;
+    margin-right: 24vw;
 }
 .contacts a{
     font-size: 22px;
@@ -62,41 +65,111 @@ color: red;
 h1{
     font-family:'Courier New', Courier, monospace;
 }
+a{
+    text-decoration: none; 
+    font-family:'Courier New', Courier, monospace;
+    color: cyan;
+    margin-top: 10px;
+ }
+ .number{
+     color:cyan;
+     width:100%;
+     text-align: center;
+     margin-top: 20px;
+ }
+ .email{
+     color:cyan;
+     width: 100%;
+     font-family:'Courier New', Courier, monospace;
+     text-align: center;
+     overflow: hidden;
+     white-space: nowrap;
+     animation:
+      typing 5s steps(27,end),
+      cursor .4s step-end infinite;    
+  }
+  span{
+     color:white;
+     display: inline;
+     text-decoration: none;
+     font-family:'Courier New', Courier, monospace;
+     font-size: 30px;
+     letter-spacing: 4px;
+     animation : animate 3s linear ;
+     animation-duration: 6s;
+    }
 
 @media (max-width:500px){
-    body{
+    /* body{
         background-color: rgb(131, 46, 46);  
-    }
+    } */
     .navbar{
-         background-color:black   
+         /* background-color:black; */
+         display: flex;
+         flex-wrap: wrap;   
     }
     .navbar li{
-        float:none ;
+        float:left ;
         list-style: none;
         margin: 4px 4px;
+        font-size: 10%vh;
         }
+        /* .contact-me{
+            color: red;
+        }
+        .my-gallery, .home, .about-me{
+            color:white;
+        } */
+       .contacts{
+        margin-top: 5vw;
+       }
+       .email{
+        font-size: 1.3vw;
+       }
+       .number{
+        font-size: medium;
+        margin-top: 5vw;
+       }
+       .contacts a{
+        font-size: medium;
+       }
+       .form-div{
+        width : 100%;
+       }
+       .span{
+        width : 50px;
+        font-size: 10px;
+       }
+       
 }
 
 
     form{
-     background-color : brown;
+     background-color : #081b29;
      padding: 30px;
-     border-radius : 20%;
-     width: 200px;
-     height: 250px;
-     margin-left: 80vw;
     }
     .frm{
      font-size : 25px;
-     color : white;
-     text-align: center;
+     color : cyan;  
+     text-align: start;
+     
+    }
+    .form-div input{
+        width : 100%;
+        color: red;
+    }
+    ::placeholder{
+        color : black;
+        opacity: 1;
     }
     div input{
-     background-color: aquamarine;
+     background-color: white;
      text-align : center;
     }
     button{
      background-color : aquamarine;
+     width: 5vw;
+     height:4vh ;
     }
     #b1{
      margin-left: 3em;
@@ -104,40 +177,18 @@ h1{
     form{
      transition: width 3s, height 3s, transform 2s;
     }
+    .form div{
+            display: flex;
+            width : 100%;
+            
+            justify-content: flex-start;
+    }
    
     form:hover{
    
-       transform: rotate(360deg);
+       /* transform: rotate(360deg); */
     }
-    a{
-       text-decoration: none; 
-       font-family:'Courier New', Courier, monospace;
-       color: cyan;
-    }
-    .number{
-        color:cyan;
-    }
-    .email{
-        color:cyan;
-        width: 100%;
-        font-family:'Courier New', Courier, monospace;
-        text-align: center;
-        overflow: hidden;
-        white-space: nowrap;
-        animation:
-         typing 5s steps(27,end),
-         cursor .4s step-end infinite;    
-     }
-     span{
-        color:white;
-        display: inline;
-        text-decoration: none;
-        font-family:'Courier New', Courier, monospace;
-        font-size: 30px;
-        letter-spacing: 4px;
-        animation : animate 3s linear ;
-        animation-duration: 6s;
-       }
+  
 
      @keyframes cursor{
         from, to {border-color: transparent;}
@@ -158,8 +209,7 @@ h1{
         }
        }
 
-
-
+ 
         
 
        
